[workspace]
members = ["log", "netfetch", "daqingest"]
resolver = "2"

[profile.release]
opt-level = 2
debug = 0
overflow-checks = false
debug-assertions = false
lto = "thin"
codegen-units = 64
incremental = true

[patch.crates-io]
thiserror = { git = "https://github.com/dominikwerder/thiserror.git" }
