[package]
name = "daqingest"
version = "0.2.0-alpha.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[features]
default = []
# default = ["bsread"]
bsread = []

[dependencies]
clap = { version = "4.4.2", features = ["derive", "cargo"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.9"
async-channel = "1.9.0"
futures-util = "0.3"
chrono = "0.4"
bytes = "1.4.0"
libc = "0.2"
err = { path = "../../daqbuffer/crates/err" }
netpod = { path = "../../daqbuffer/crates/netpod" }
taskrun = { path = "../../daqbuffer/crates/taskrun" }
log = { path = "../log" }
stats = { path = "../stats" }
scywr = { path = "../scywr" }
dbpg = { path = "../dbpg" }
series = { path = "../series" }
netfetch = { path = "../netfetch" }
ingest-bsread = { path = "../ingest-bsread" }
ingest-linux = { path = "../ingest-linux" }
