[package]
name = "ingest-bsread"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
futures-util = "0.3"
async-channel = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4.0"
md-5 = "0.10.5"
hex = "0.4.3"
log = { path = "../log" }
series = { path = "../series" }
stats = { path = "../stats" }
scywr = { path = "../scywr" }
dbpg = { path = "../dbpg" }
slidebuf = { path = "../slidebuf" }
ingest-linux = { path = "../ingest-linux" }
err = { path = "../../daqbuffer/crates/err" }
netpod = { path = "../../daqbuffer/crates/netpod" }
taskrun = { path = "../../daqbuffer/crates/taskrun" }
batchtools = { path = "../batchtools" }
items_0 = { path = "../../daqbuffer/crates/items_0" }
items_2 = { path = "../../daqbuffer/crates/items_2" }
streams = { path = "../../daqbuffer/crates/streams" }
bitshuffle = { path = "../../daqbuffer/crates/bitshuffle" }
