[package]
name = "scywr"
version = "0.0.1"
authors = ["Dominik Werder <dominik.werder@gmail.com>"]
edition = "2021"

[dependencies]
futures-util = "0.3"
async-channel = "1.9.0"
scylla = "0.9.0"
log = { path = "../log" }
stats = { path = "../stats" }
series = { path = "../series" }
err = { path = "../../daqbuffer/crates/err" }
netpod = { path = "../../daqbuffer/crates/netpod" }
taskrun = { path = "../../daqbuffer/crates/taskrun" }
